[package]
name = "poller"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
shuttle-poise = "0.33.0"
shuttle-runtime = "0.33.0"
shuttle-secrets = "0.33.0"
tracing = "0.1.37"
tokio = "1.26.0"
shuttle-persist = "0.33.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
once_cell = "1.18.0"